# xiaoai-agent

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: build-agent.yml
aivs_sdk_probe/: Cargo.toml  README.md  build.rs
aivs_sdk_probe/src/: main.rs
deploy/: README.md
deploy/client-patch/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
deploy/client-patch/patches/: 01-ssh.patch  02-login.patch  03-ota.patch  04-start.patch
deploy/client-patch/patches/LX06/: 01-asound.patch  02-asound-dts.patch  03-libxaudio_engine.sh
deploy/client-patch/patches/OH2P/: 05-asound-mute-native.patch
deploy/client-patch/src/: build.sh  extract.py  extract.sh  ota.ts  patch.sh  squashfs.sh
deploy/docs/: OH2P_1.62.2_BUILD_NOTES.md  OPEN_XIAOAI_CLIENT_FLASH_NOTES.md  flash.md
deploy/flash-tool/: README.md  flash
deploy/upstream-open-xiaoai/: README.md  UPSTREAM.md
xiaoai-agent/: AGENTS.md  Cargo.toml  README.md  agent.example.yaml
xiaoai-agent/src/: agent.rs  airplay.rs  asr.rs  base.rs  capture.rs  config.rs  device.rs  main.rs  mcp.rs  mcp_legacy_sse.rs  music.rs  shell.rs  tools.rs  vad.rs  weather.rs
xiaoai-agent/src/audio/: config.rs  record.rs
xiaoai-agent/src/monitor/: kws.rs  mod.rs
xiaoai_asr_probe/: Cargo.toml  README.md
xiaoai_asr_probe/src/: main.rs
